syntax = "proto3";

package personaappapi.cv;

import "google/protobuf/wrappers.proto";

option java_package = "online.personaapp";
option java_outer_classname = "GrpcCV";

service PersonaAppCV {
    rpc UpsertExperience (UpsertExperienceRequest) returns (UpsertExperienceResponse);
    rpc GetExperiences (GetExperiencesRequest) returns (GetExperiencesResponse);
    rpc DeleteExperience (DeleteExperienceRequest) returns (DeleteExperienceResponse);

    rpc UpsertCVJobKinds (UpsertCVJobKindsRequest) returns (UpsertCVJobKindsResponse);
    rpc GetCVJobKinds (GetCVJobKindsRequest) returns (GetCVJobKindsResponse);
    rpc DeleteCVJobKinds (DeleteCVJobKindsRequest) returns (DeleteCVJobKindsResponse);

    rpc UpsertJobKind (UpsertJobKindRequest) returns (UpsertJobKindResponse);
    rpc GetJobKinds (GetJobKindsRequest) returns (GetJobKindsResponse);
    rpc DeleteJobKind (DeleteJobKindRequest) returns (DeleteJobKindResponse);

    rpc UpsertCVJobTypes (UpsertCVJobTypesRequest) returns (UpsertCVJobTypesResponse);
    rpc GetCVJobTypes (GetCVJobTypesRequest) returns (GetCVJobTypesResponse);
    rpc DeleteCVJobTypes (DeleteCVJobTypesRequest) returns (DeleteCVJobTypesResponse);

    rpc UpsertJobType (UpsertJobTypeRequest) returns (UpsertJobTypeResponse);
    rpc GetJobTypes (GetJobTypesRequest) returns (GetJobTypesResponse);
    rpc DeleteJobType (DeleteJobTypeRequest) returns (DeleteJobTypeResponse);
}
//PutExperience(
//		ctx context.Context,
//		CVID string,
//		experience *cvController.CVExperience,
//	) (cvController.ExperienceID, error)
//	GetExperiences(
//		ctx context.Context,
//		CVID string,
//	) ([]*cvController.CVExperience, error)
//	DeleteExperience(
//		ctx context.Context,
//		experienceID string,
//	) error

// Upsert experience
message UpsertExperienceRequest {
    google.protobuf.StringValue id = 1;
    string company_name = 2;
    string date_from = 3;
    string date_till = 4;
    string position = 5;
    string description = 6;
}

message UpsertExperienceResponse {
    string id = 1;
}

// Get experience
message GetExperiencesRequest {
}

message GetExperiencesResponse {
    repeated CVExperience cv_experience = 1;
}

// Delete experience
message DeleteExperienceRequest {
    string id = 1;
}

message DeleteExperienceResponse {
}

// Upsert CV job kinds
message UpsertCVJobKindsRequest {
    google.protobuf.StringValue id = 1;
    repeated string jobKindsIDs = 5;
}

message UpsertCVJobKindsResponse {
    string id = 1;
}

// Get CV job kinds
message GetCVJobKindsRequest {
}

message GetCVJobKindsResponse {
    repeated CVJobKind cv_job_kind = 1;
}

// Delete CV job kinds
message DeleteCVJobKindsRequest {
    string id = 1;
}

message DeleteCVJobKindsResponse {
}

// Upsert job kind
message UpsertJobKindRequest {
    google.protobuf.StringValue id = 1;
    string name = 2;
}

message UpsertJobKindResponse {
    string id = 1;
}

// Get job type
message GetJobKindsRequest {
}

message GetJobKindsResponse {
    repeated JobKind job_kind = 1;
}

// Delete job type
message DeleteJobKindRequest {
    string id = 1;
}

message DeleteJobKindResponse {
}

// Upsert CV job types
message UpsertCVJobTypesRequest {
    google.protobuf.StringValue id = 1;
    repeated string jobTypesIDs = 5;
}

message UpsertCVJobTypesResponse {
    string id = 1;
}

// Get CV job types
message GetCVJobTypesRequest {
}

message GetCVJobTypesResponse {
    repeated CVJobType cv_job_type = 1;
}

// Delete CV job types
message DeleteCVJobTypesRequest {
    string id = 1;
}

message DeleteCVJobTypesResponse {
}

// Upsert job type
message UpsertJobTypeRequest {
    google.protobuf.StringValue id = 1;
    string name = 2;
}

message UpsertJobTypeResponse {
    string id = 1;
}

// Get job type
message GetJobTypesRequest {
}

message GetJobTypesResponse {
    repeated JobType job_type = 1;
}

// Delete job type
message DeleteJobTypeRequest {
    string id = 1;
}

message DeleteJobTypeResponse {
}

// Models
message CVExperience {
    string id = 1;
    string company_name = 2;
    string date_from = 3;
    string date_till = 4;
    string position = 5;
    string description = 6;
}

message CVJobKind {
    string id = 1;
    string name = 2;
}

message JobKind {
    string id = 1;
    string name = 2;
}

message CVJobType {
    string id = 1;
    string name = 2;
}

message JobType {
    string id = 1;
    string name = 2;
}
